# trumpet_synth

./: .gitignore  Cargo.toml
pcbs/blow_button_board/: blow_button_board.kicad_pcb  blow_button_board.kicad_prl  blow_button_board.kicad_pro  blow_button_board.kicad_sch
pcbs/trumpet_synth_mainboard/: fp-info-cache  fp-lib-table  trumpet_synth_mainboard.kicad_pcb  trumpet_synth_mainboard.kicad_prl  trumpet_synth_mainboard.kicad_pro  trumpet_synth_mainboard.kicad_sch
pcbs/valves_board/: valves_board.kicad_pcb  valves_board.kicad_prl  valves_board.kicad_pro  valves_board.kicad_sch
rp2040/: Cargo.toml  build.rs
rp2040/.cargo/: config.toml
rp2040/src/: i2s.pio  io.rs  main.rs  rgb.rs
trumpet-synth/: Cargo.toml  IDEA.md
trumpet-synth/src/: interface.rs  io.rs  lib.rs  synth.rs  trumpet.rs
trumpet-synth/tests/: lib.rs  trumpet.rs  wav.rs
web/frontend/: Cargo.toml  Dioxus.toml  README.md  build.rs
web/frontend/assets/: stylesheet.css  wasm_audio.js  wasm_audio_bg.wasm
web/frontend/src/: audio.rs  io.rs  main.rs
web/wasm-audio/: Cargo.toml  README.md  build.sh
web/wasm-audio/src/: lib.rs
