[workspace]
members = ["trumpet-synth", "web/wasm-audio", "web/frontend", "rp2040"]
resolver = "2"

[workspace.dependencies]
rytmos-synth = { path = "../rytmos/rytmos-synth" }
rytmos-engrave = { path = "../rytmos/rytmos-engrave" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = false
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
