[package]
name = "trumpet-synth-rp2040"
version = "0.1.0"
edition = "2021"


[dependencies]
fixed = "1.27.0"
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
log = "0.4.22"
defmt = { version = "0.3.5", optional = true }
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
fugit = "0.3.7"
pio = "0.2.1"
pio-proc = "0.2.2"
rp2040-hal = { version = "0.11.0", default-features = false, features = [
    "rt",
    "critical-section-impl",
    "rom-func-cache",
] }
heapless = "0.7.16"
rp2040-boot2 = "0.2.1"
# TODO: move these to a library repo and have repo per "product"
rytmos-synth.workspace = true
common.workspace = true
# sh1106 = "0.5.0"
trumpet-synth = { path = "../trumpet-synth", features = ["defmt"] }
rp2040-i2s = "0.1.0"

[features]
defmt = ["dep:defmt"]
