[package]
name = "trumpet-synth"
version = "0.1.0"
edition = "2021"

[dependencies]
fixed = "1.27.0"
log = "0.4.22"
heapless = "0.7.16"
rytmos-engrave.workspace = true
rytmos-synth.workspace = true
common.workspace = true
enum-iterator = "2.1.0"
# TODO: not no_std
tracing = { version = "0.1.41", optional = true }
defmt = { version = "1.0.1", optional = true }

[dev-dependencies]
hound = "3.5.1"
plotters = "0.3.7"

[features]
std = ["tracing"]
defmt = ["dep:defmt"]
